tests/compile-fail/unknown_type.rs
use enum_discriminant::discriminant;

#[discriminant(unknown)]
enum EnumWithUnknownType {
    Unit = 17,
}

fn main() {}
